Add the persistence project into the solution

--- a/eCommerce.Api/eCommerce.Api.csproj
+++ b/eCommerce.Api/eCommerce.Api.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\eCommerce.Data\eCommerce.Data.csproj" />
     <ProjectReference Include="..\eCommerce.Domain\eCommerce.Domain.csproj" />
   </ItemGroup>
 
