--- a/eCommerce.Api/Properties/launchSettings.json
+++ b/eCommerce.Api/Properties/launchSettings.json
@@ -16,7 +16,9 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7191;http://localhost:5191",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "Logging__LogLevel__eCommerce.Api.Controllers": "Debug"
+
       }
     },
     "IIS Express": {
