--- a/eCommerce.Api/appsettings.json
+++ b/eCommerce.Api/appsettings.json
@@ -2,6 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "eCommerce.Domain": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
