--- a/eCommerce.Api/appsettings.json
+++ b/eCommerce.Api/appsettings.json
@@ -1,10 +1,28 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "eCommerce.Domain": "Debug",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "Console": {
+            "LogLevel": {
+                "Default": "Information",
+                "eCommerce.Domain": "Debug",
+                "Microsoft.AspNetCore": "Warning"
+            },
+            "FormatterName": "json",
+            "FormatterOptions": {
+                "SingleLine": true,
+                "IncludeScopes": true,
+                "TimestampFormat": "HH:mm:ss ",
+                "UseUtcTimestamp": true,
+                "JsonWriterOptions": {
+                    "Indented": true
+                }
+            }
+        },
+        "Debug": {
+            "LogLevel": {
+                "Default": "Debug",
+                "Microsoft.AspNetCore": "Information"
+            }
+        }
+    },
   "AllowedHosts": "*"
 }
