--- a/eCommerce.Api/Properties/launchSettings.json
+++ b/eCommerce.Api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       "applicationUrl": "https://localhost:7191;http://localhost:5191",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "Logging__LogLevel__eCommerce.Api.Controllers": "Debug"
+        //"Logging__LogLevel__eCommerce.Api.Controllers": "Debug"
 
       }
     },
