Add logs when API failures from the web app/ ui

--- a/eCommerce.Api/appsettings.json
+++ b/eCommerce.Api/appsettings.json
@@ -10,7 +10,7 @@
                 "eCommerce": "Debug",
                 "Microsoft.AspNetCore": "Warning"
             },
-            "FormatterName": "json",
+            "FormatterName": "simple",
             "FormatterOptions": {
                 "SingleLine": true,
                 "IncludeScopes": true,
