Add both HTTP and W3C Logging

--- a/eCommerce.WebApp/appsettings.json
+++ b/eCommerce.WebApp/appsettings.json
@@ -1,9 +1,25 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning",
+            "Microsoft.AspNetCore.HttpLogging": "Information",
+            "eCommerce": "Debug"
+        },
+
+        "Console": {
+            "FormatterName": "simple",
+            "FormatterOptions": {
+                "SingleLine": true,
+                "IncludeScopes": true,
+                "TimestampFormat": "HH:mm:ss ",
+                "UseUtcTimestamp": true,
+                "JsonWriterOptions": {
+                    "Indented": true
+                }
+            }
+        }
+
+    },
+    "AllowedHosts": "*"
 }
