Add scopes with semantic log entries

--- a/eCommerce.Api/appsettings.json
+++ b/eCommerce.Api/appsettings.json
@@ -1,16 +1,12 @@
 {
     "Logging": {
-        //"LogLevel": {
-        //    "Default": "Information",
-        //    "Microsoft.AspNetCore": "Warning"
-        //}
         "Console": {
             "LogLevel": {
                 "Default": "Information",
                 "eCommerce": "Debug",
                 "Microsoft.AspNetCore": "Warning"
             },
-            "FormatterName": "simple",
+            "FormatterName": "json",
             "FormatterOptions": {
                 "SingleLine": true,
                 "IncludeScopes": true,
@@ -20,14 +16,12 @@
                     "Indented": true
                 }
             }
+        },
+        "Debug": {
+            "LogLevel": {
+                "Default": "Critical"
+            }
         }
-        //},
-        //"Debug": {
-        //    "LogLevel": {
-        //        "Default": "Debug",
-        //        "Microsoft.AspNetCore": "Information"
-        //    }
-        //}
     },
   "AllowedHosts": "*"
 }
