Override specific providers from the app builder

--- a/eCommerce.Api/appsettings.json
+++ b/eCommerce.Api/appsettings.json
@@ -16,12 +16,12 @@
                     "Indented": true
                 }
             }
-        },
-        "Debug": {
-            "LogLevel": {
-                "Default": "Critical"
-            }
-        }
+        }//,
+        //"Debug": {
+        //    "LogLevel": {
+        //        "Default": "Critical"
+        //    }
+        //}
     },
   "AllowedHosts": "*"
 }
