Add application insights to api and webapp projects with a placeholder entry for the connection string in the appsettings.json

--- a/eCommerce.Api/appsettings.json
+++ b/eCommerce.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ApplicationInsights": {
+        "ConnectionString": "TODO: create an Application Insight from azure and grab the connection string there."
+    },
     "Logging": {
         "Console": {
             "LogLevel": {
@@ -16,12 +19,19 @@
                     "Indented": true
                 }
             }
-        }//,
-        //"Debug": {
-        //    "LogLevel": {
-        //        "Default": "Critical"
-        //    }
-        //}
+        },
+        "ApplicationInsights": {
+            "LogLevel": {
+                "Default": "Information",
+                "Microsoft.AspNetCore": "Warning",
+                "eCommerce": "Debug"
+            }
+        },
+        "Debug": {
+            "LogLevel": {
+                "Default": "Critical"
+            }
+        }
     },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*"
 }
