--- a/eCommerce.WebApp/appsettings.json
+++ b/eCommerce.WebApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ApplicationInsights": {
+        "ConnectionString": "TODO: create an Application Insight from azure and grab the connection string there."
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
@@ -18,8 +21,19 @@
                     "Indented": true
                 }
             }
+        },
+        "ApplicationInsights": {
+            "LogLevel": {
+                "Default": "Information",
+                "Microsoft.AspNetCore": "Warning",
+                "eCommerce": "Debug"
+            }
+        },
+        "Debug": {
+            "LogLevel": {
+                "Default": "Critical"
+            }
         }
-
     },
     "AllowedHosts": "*"
 }
