--- a/eCommerce.WebApp/eCommerce.WebApp.csproj
+++ b/eCommerce.WebApp/eCommerce.WebApp.csproj
@@ -12,6 +12,10 @@
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.1" />
+    <PackageReference Include="NLog" Version="5.0.4" />
+    <PackageReference Include="NLog.Targets.Splunk" Version="3.0.0" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.1.4" />
+
   </ItemGroup>
 
 </Project>
