--- a/eCommerce.Api/eCommerce.Api.csproj
+++ b/eCommerce.Api/eCommerce.Api.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="IdentityModel" Version="6.0.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="NLog" Version="5.0.4" />
     <PackageReference Include="NLog.Targets.Splunk" Version="3.0.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.1.4" />
