Filtering/Controlling health check logs entries

--- a/eCommerce.Api/appsettings.json
+++ b/eCommerce.Api/appsettings.json
@@ -2,6 +2,15 @@
     "ApplicationInsights": {
         "ConnectionString": "TODO: create an Application Insight from azure and grab the connection string there."
     },
+    "Serilog": {
+        "Default": "Information",
+        "Override": {
+            "Microsoft.AspNetCore": "Warning",
+            "eCommerce": "Debug",
+            "System": "Warning",
+            "Microsoft.Hosting.Diagnostics": "Warning"
+        }
+    },
     "Logging": {
         "Console": {
             "LogLevel": {
