Add configuration props for appsettings.json

--- a/eCommerce.Docker.Api/appsettings.json
+++ b/eCommerce.Docker.Api/appsettings.json
@@ -1,9 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "Db": "Server=notsure;Database=stillnotsure;User Id=sa;Password=***;MultipleActiveResultSets=true;"
+    },
+    "SimpleProperty": "hi-there",
+    "Inventory": {
+        "NestedProperty": "you-are-doing-great!"
+    },
+    "AllowedHosts": "*"
 }
