Read the configuration properties from the appsettings.json and log it on launch

--- a/eCommerce.Docker.Api/appsettings.Development.json
+++ b/eCommerce.Docker.Api/appsettings.Development.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Inventory": {
+        "NestedProperty": "you-are-doing-fantastic!"
     }
-  }
 }
