Add environment variables from the docker file and launchSettings.json

--- a/eCommerce.Docker.Api/Dockerfile
+++ b/eCommerce.Docker.Api/Dockerfile
@@ -3,6 +3,7 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
+ENV SimpleProperty="hello-from-BASE-dockerfile"
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
@@ -18,4 +19,5 @@ RUN dotnet publish "eCommerce.Docker.Api.csproj" -c Release -o /app/publish /p:U
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV SimpleProperty="hello-from-FINAL-dockerfile"
 ENTRYPOINT ["dotnet", "eCommerce.Docker.Api.dll"]
